<?xml version="1.0"?>
<package format="3">
  <name>global_planner</name>
  <version>0.1.0</version>
  <description>3D global path planner using A* on an OctoMap.</description>
  <maintainer email="kaushikraghupathruni@gmail.com">Kaushik</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>octomap_msgs</depend>
  <depend>planner_msgs</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
